<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.checkstyle.autofix</groupId>
    <artifactId>checkstyle-openrewrite-recipes</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>checkstyle openrewrite recipes</name>
    <description>Automatically fix Checkstyle violations with OpenRewrite</description>
    <url>https://github.com/checkstyle/checkstyle-openrewrite-recipes</url>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.plugin>3.11.0</maven.compiler.plugin>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <rewrite.version>8.54.0</rewrite.version>
        <rewrite.maven.plugin>6.11.0</rewrite.maven.plugin>
        <recipe.bom.version>3.9.0</recipe.bom.version>
        <junit.version>5.13.0</junit.version>
        <assertj.version>3.24.2</assertj.version>

        <!-- Checkstyle properties -->
        <maven.checkstyle.plugin.version>3.6.0</maven.checkstyle.plugin.version>
        <checkstyle.version>10.26.1</checkstyle.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openrewrite.recipe</groupId>
                <artifactId>rewrite-recipe-bom</artifactId>
                <version>${recipe.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!-- Checkstyle dependency for parsing Checkstyle configs -->
        <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
        </dependency>

        <!-- OpenRewrite core dependencies - using consistent versions -->
        <dependency>
            <groupId>org.openrewrite</groupId>
            <artifactId>rewrite-java</artifactId>
            <version>${rewrite.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openrewrite</groupId>
            <artifactId>rewrite-java-17</artifactId>
            <version>${rewrite.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>com.google.truth</groupId>
            <artifactId>truth</artifactId>
            <version>1.4.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openrewrite</groupId>
            <artifactId>rewrite-test</artifactId>
            <version>${rewrite.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Compiler plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <!-- Surefire plugin for running tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <systemPropertyVariables>
                        <org.slf4j.simpleLogger.log.org.openrewrite>debug</org.slf4j.simpleLogger.log.org.openrewrite>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <!-- Checkstyle plugin for code style regulation -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.checkstyle.plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <includeResources>false</includeResources>
                            <includeTestResources>false</includeTestResources>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                            <configLocation>
                                https://raw.githubusercontent.com/checkstyle/checkstyle/checkstyle-${checkstyle.version}/config/checkstyle-checks.xml
                            </configLocation>
                            <propertiesLocation>config/checkstyle.properties</propertiesLocation>
                            <failOnViolation>true</failOnViolation>
                            <logViolationsToConsole>true</logViolationsToConsole>
                            <maxAllowedViolations>0</maxAllowedViolations>
                            <violationSeverity>error</violationSeverity>
                            <outputFileFormat>xml</outputFileFormat>
                            <outputFile>
                                ${project.build.directory}/checkstyle/checkstyle-report.xml
                            </outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>${rewrite.maven.plugin}</version>
                <configuration>
                    <activeRecipes>
                        <recipe>CheckstyleAutoFixConfigured</recipe>
                    </activeRecipes>
                    <exclusions>
                        <exclusion>src/test/resources/**</exclusion>
                    </exclusions>
                    <recipeArtifactCoordinates>
                        <coordinate>org.checkstyle.autofix:checkstyle-openrewrite-recipes:1.0.0</coordinate>
                    </recipeArtifactCoordinates>
                </configuration>
                <executions>
                    <execution>
                        <id>checkstyle-autofix</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>